Add detailed Javadoc comments to OrderController, OrderService, and related classes for better documentation. Refactor OrderSpecification to use a constant for the createdAt field. Update stream operations to use the new List.of() method